ci/test/infra-networking/fake-secret-store.yaml
---
apiVersion: external-secrets.io/v1
kind: ClusterSecretStore
metadata:
  name: fake
spec:
  provider:
    fake:
      data:
      # external-dns/pihole ExternalSecret mappings
      - key: "pihole_password"
        value: "example"
      # unifi ExternalSecret mappings
      - key: "unifi_db_user"
        value: "unifi"
      - key: "unifi_db_password"
        value: "example"
      # freeradius ExternalSecret mappings
      - key: "freeradius_healthcheck_secret"
        value: "example-healthcheck-secret"
      - key: "freeradius_unifi_secret"
        value: "example-unifi-auth-secret"
      - key: "freeradius_healthcheck_password"
        value: "example-healthcheck-password"
      - key: "freeradius_mac2vlan_map"
        value: |
          1234567890ab: 20
      - key: "freeradius_vlan_default"
        value: "10"
