ci/test/infra-networking/infra-networking-core.yaml
---
apiVersion: kustomize.toolkit.fluxcd.io/v1
kind: Kustomization
metadata:
  name: infra-networking-core
  namespace: flux-system
spec:
  interval: 15m0s
  path: ./infrastructure/subsystems/networking-core
  postBuild:
    substitute:
      externaldns_provider: pihole
    substituteFrom:
    - kind: ConfigMap
      name: cluster-common-conf
    - kind: ConfigMap
      name: cluster-networking-conf
  prune: false
  sourceRef:
    kind: GitRepository
    name: test-source
    namespace: flux-system
  timeout: 2m0s
  wait: false
  patches:
  # patch cert-manager helm values to include dns01RecursiveNameservers config
  # yamllint disable-line rule:indentation
  - patch: |-
      apiVersion: helm.toolkit.fluxcd.io/v2
      kind: HelmRelease
      metadata:
        name: cert-manager-release
        namespace: cert-manager
      spec:
        values:
          dns01RecursiveNameservers: https://1.1.1.1:443/dns-query,https://1.0.0.1:443/dns-query
          dns01RecursiveNameserversOnly: true
    target:
      group: helm.toolkit.fluxcd.io
      kind: HelmRelease
      name: cert-manager-release
      namespace: cert-manager
