ci/test/infra-networking/infra-networking-extra.yaml
---
apiVersion: kustomize.toolkit.fluxcd.io/v1
kind: Kustomization
metadata:
  name: infra-networking-extra
  namespace: flux-system
spec:
  interval: 15m0s
  path: ./infrastructure/subsystems/networking-extra
  postBuild:
    substitute:
      secret_store: fake
      dns_zone: example.com
      domain_name: cluster.example.com
      freeradius_external_ip_address: 10.112.1.6
      pihole_external_ip_address: 10.112.1.1
  prune: false
  sourceRef:
    kind: GitRepository
    name: test-source
    namespace: flux-system
  timeout: 2m0s
  wait: false
  patches:
  # yamllint disable-line rule:indentation
  - patch: |-
      $patch: delete
      apiVersion: helm.toolkit.fluxcd.io/v2
      kind: HelmRelease
      metadata:
        name: tailscale-operator
        namespace: tailscale
    target:
      group: helm.toolkit.fluxcd.io
      kind: HelmRelease
      name: tailscale-operator
      namespace: tailscale
