ci/test/infra-networking/kustomization.yaml
---
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
- infra-networking-core.yaml
- infra-networking-extra.yaml

sortOptions:
  order: fifo
