ci/test/infra-networking/validate-infra-networking-extra.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: validate-infra-networking-extra
spec:
  try:
  - description: Reconcile infra-networking-extra
    script:
      # yamllint disable-line rule:line-length
      content: ../chainsaw/scripts/flux-reconcile.sh --resource-type=kustomization --resource-name=infra-networking-extra --timeout=3m
      timeout: 3m

  # Pi-hole resources
  - description: Assert persistentvolumeclaim/pihole-data
    assert:
      bindings:
      - name: name
        value: pihole-data
      - name: namespace
        value: pihole
      file: ../chainsaw/assertions/pvc-bound.yaml
  - description: Assert deployment/cloudflared-doh
    assert:
      bindings:
      - name: name
        value: cloudflared-doh
      - name: namespace
        value: pihole
      file: ../chainsaw/assertions/deployment-ready.yaml
  - description: Assert deployment/unbound
    assert:
      bindings:
      - name: name
        value: unbound
      - name: namespace
        value: pihole
      file: ../chainsaw/assertions/deployment-ready.yaml
  - description: Assert deployment/pihole
    assert:
      bindings:
      - name: name
        value: pihole
      - name: namespace
        value: pihole
      file: ../chainsaw/assertions/deployment-ready.yaml
  - description: Assert IPAddressPool/pihole-pool
    assert:
      resource:
        apiVersion: metallb.io/v1beta1
        kind: IPAddressPool
        metadata:
          name: pihole-pool
          namespace: metallb-system
  - description: Assert service/pihole-dns-tcp
    assert:
      bindings:
      - name: name
        value: pihole-dns-tcp
      - name: namespace
        value: pihole
      file: ../chainsaw/assertions/service-loadbalancer-ready.yaml
  - description: Assert service/pihole-dns-udp
    assert:
      bindings:
      - name: name
        value: pihole-dns-udp
      - name: namespace
        value: pihole
      file: ../chainsaw/assertions/service-loadbalancer-ready.yaml
  - description: Assert ingress/pihole-admin-https
    assert:
      bindings:
      - name: name
        value: pihole-admin-https
      - name: namespace
        value: pihole
      file: ../chainsaw/assertions/ingress-ready.yaml
  - description: Assert ingress/pihole-adblock-http
    assert:
      bindings:
      - name: name
        value: pihole-adblock-http
      - name: namespace
        value: pihole
      file: ../chainsaw/assertions/ingress-ready.yaml
  - description: Assert ingress/pihole-adblock-https
    assert:
      bindings:
      - name: name
        value: pihole-adblock-https
      - name: namespace
        value: pihole
      file: ../chainsaw/assertions/ingress-ready.yaml

  # UniFi resources
  - description: Assert IPAddressPool/unifi-pool
    assert:
      resource:
        apiVersion: metallb.io/v1beta1
        kind: IPAddressPool
        metadata:
          name: unifi-pool
          namespace: metallb-system
  - description: Assert deployment/unifi-db
    assert:
      bindings:
      - name: name
        value: unifi-db
      - name: namespace
        value: unifi
      file: ../chainsaw/assertions/deployment-ready.yaml
  - description: Assert deployment/unifi-network-application
    assert:
      bindings:
      - name: name
        value: unifi-network-application
      - name: namespace
        value: unifi
      file: ../chainsaw/assertions/deployment-ready.yaml
  - description: Assert service/unifi-tcp
    assert:
      bindings:
      - name: name
        value: unifi-tcp
      - name: namespace
        value: unifi
      file: ../chainsaw/assertions/service-loadbalancer-ready.yaml
  - description: Assert service/unifi-udp
    assert:
      bindings:
      - name: name
        value: unifi-udp
      - name: namespace
        value: unifi
      file: ../chainsaw/assertions/service-loadbalancer-ready.yaml
  - description: Assert ingress/unifi-web
    assert:
      bindings:
      - name: name
        value: unifi-web
      - name: namespace
        value: unifi
      file: ../chainsaw/assertions/ingress-ready.yaml

  catch:
  - describe:
      apiVersion: apps/v1
      kind: Deployment
      name: pihole
      namespace: pihole
  - describe:
      apiVersion: apps/v1
      kind: Deployment
      name: unifi-network-application
      namespace: unifi
  - podLogs:
      name: pihole
      namespace: pihole
